<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_weixin"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="@dimen/line_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/left_margin"
            android:background="@null" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share_wechat_dark"
                android:layout_toLeftOf="@+id/tv_weixin"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/tv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="@string/share_to_weixin"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_weibo"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="@dimen/line_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/left_margin"
            android:background="@null" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@null"
                android:layout_toLeftOf="@+id/tv_weibo"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/tv_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="@null"
                android:textColor="@color/white" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_cancle"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="@dimen/line_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/left_margin"
            android:layout_marginTop="@dimen/left_margin"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>