<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_title"/>
    <include layout="@layout/line_h_mine_space" />

    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
     android:orientation="horizontal">
     <ImageView
         android:layout_width="40dp"
         android:id="@+id/charge_picture"
         android:layout_height="40dp" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_count"/>
             <TextView
                 android:id="@+id/charge_account"
                 android:layout_width="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_height="wrap_content"
                 android:text=""/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/charge_left"/>
             <TextView
                 android:id="@+id/charge_left"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"/>
         </LinearLayout>
     </LinearLayout>
    </LinearLayout>
    <include layout="@layout/line_h_mine_space" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/charge_select"/>
    <include layout="@layout/line_h_mine_space" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/img_wechat_pay"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/charge_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/btn_pay_selector"
        android:button="@null"
        android:checked="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/img_zfb_pay"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="wrap_content"
        android:id="@+id/charge_zfb"
        android:button="@null"
        android:layout_gravity="center_vertical"
        android:background="@drawable/btn_pay_selector"
        android:layout_height="wrap_content" />
</LinearLayout>

</LinearLayout>